devops/k8s/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yaes-deployment
  labels:
    app: yaes
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: yaes
  template:
    metadata:
      labels:
        app: yaes
    spec:
      restartPolicy: Always
      containers:
      - name: yaes
        image: gauravagarwalr/yaes-server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http-server
          containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
---

apiVersion: v1
kind: Service
metadata:
  name: "yaes"
  labels:
    app: yaes
spec:
  ports:
  - port: 8080
    targetPort: http-server
  selector:
    app: yaes
  type: ClusterIP
